finally fixec chat on mobile

--- a/public/styles/chat.css
+++ b/public/styles/chat.css
@@ -205,6 +205,12 @@ body, html {
         right: 0;
         bottom: 0;
     }
+    .chat-window {
+        display: none;
+    }
+    .show-chat .chat-window {
+        display: block;
+    }
     .match-list, .chat-window {
         width: 100%;
         height: 100%;
